# system

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
01/: CMakeLists.txt  test.c
02/: CMakeLists.txt  open.c
03/: CMakeLists.txt  open.c  test.h
04/: CMakeLists.txt  open.c
05/: CMakeLists.txt  open.c
06/: CMakeLists.txt  open.c
07/: CMakeLists.txt  open.c
08/: CMakeLists.txt  mkdir.c
09/: CMakeLists.txt  opendir.c
10/: CMakeLists.txt  opendir.c
11/: CMakeLists.txt  open.c
12/: CMakeLists.txt  mylib.c
13/: CMakeLists.txt  mylib.h  test.c
14/: CMakeLists.txt  fork.c
15/: CMakeLists.txt  fork.c  hello.c
16/: CMakeLists.txt  fork.c  fork2.c
17/: CMakeLists.txt  fork.c
18/: CMakeLists.txt  fork.c
19/: CMakeLists.txt  pipe.c
20/: CMakeLists.txt  fifo.h  fifo_read.c  fifo_write.c
21/: CMakeLists.txt  alarm.c  kill.c  raise.c  test.c
22/: CMakeLists.txt  pause.c  sleep.c  while.c
23/: CMakeLists.txt  signal.c  signal1.c  signal2.c
24/: CMakeLists.txt  shmget.c  shmget1.c
25/: CMakeLists.txt  a.c  b.c
26/: CMakeLists.txt  semget.c
toolchain/: toolchain.cmake
